--- a/_posts/2015-06-27-welcome.md
+++ b/_posts/2015-06-27-welcome.md
@@ -1,14 +1,13 @@
 ---
 layout: post
 section-type: post
-title: Welcome to { Personal } Jekyll Theme!
-category: tech
-tags: [ 'tutorial' ]
+title: Welcome to Matdu.io!
+category: news
+tags: [ 'welcome' ]
 ---
 
-Click the view more posts link bellow, to see the currently available post-tutorials to help you get your { Personal } website up and running quicker!
+Welcome to Matdu.github.io!
 
-Note that every time you update the site configuration (\_config.yml), you will need
-to cancel the serving (*Ctr + C*) and serve the website again.
+Hope you enjoy your stay :D.
 
-Any contributions, feedback or issues to the <a href="https://github.com/PanosSakkos/personal-jekyll-theme" target="\_blank">repo</a> are more than welcome!
+Need help? Want to help? Catch me at <a href="https://github.com/matdu" target="\_blank">Github</a>!
